Wed Dec  8 15:53:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/CONV_FRAMEC.{h,cpp,i,inl}:
        * tao/CONV_FRAMES.{h,cpp,i,inl}:
        * tao/CONV_FRAMES_T.{h,cpp,i,inl}:
        * tao/CONV_FRAMEA.cpp:
          Regenerated and replace .i file with .inl variant

        * tao/Makefile.am:
          Updated because of change above

        * tao/diffs/CONV_FRAME.diff:
          Removed these files, no diffs are needed anymore

        * tao/CONV_FRAME.pidl:
          Removed instructions about applying patches, not needed anymore

Wed Dec  8 15:41:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/TimeBaseC.{h,cpp,i,inl}:
        * tao/TimeBaseS.{h,cpp,i,inl}:
        * tao/TimeBaseS_T.{h,cpp,i,inl}:
        * tao/TimeBaseA.cpp:
          Regenerated and replace .i file with .inl variant

        * tao/Makefile.am:
          Updated because of change above

        * tao/diffs/TimeBase.*.diff:
          Removed these files, no diffs are needed anymore

        * tao/TimeBase.pidl:
          Removed instructions about applying patches, not needed anymore

Wed Dec  8 15:28:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/TAOC.{h,cpp,i,inl}:
        * tao/TAOA.cpp:
          Regenerated and replace .i file with .inl variant

        * tao/Makefile.am:
          Updated because of change above

        * tao/diffs/TAO.diff:
          Removed this file, no diffs are needed anymore

        * tao/TAO.pidl:
          Removed instructions about applying patches, not needed anymore

Wed Dec  8 11:42:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/CurrentC.{h,cpp,i,inl}:
        * tao/CurrentA.cpp:
          Regenerated and replace .i file with .inl variant

        * tao/Makefile.am:
          Updated because of change above

        * tao/diffs/Current.diff:
          Removed this file, no diffs are needed anymore

Wed Dec  8 08:04:32 2004  Jeff Parsons <j.parsons@vanderbilt.edu>
